# scenicplus_core

./: .gitignore  Cargo.toml  README.md  dprint.json  pyproject.toml
python/scenicplus_core/: __init__.py
python/scenicplus_core/algorithms/: __init__.py  _nonzero_rows.py  _sorting.py  _stats.py  arg_sort.py  sort.py
src/: lib.rs
src/algorithms/: arg_sort.rs  gini.rs  mod.rs  nonzero_rows.rs  norm_sf.rs  rank_sums.rs  sort.rs
