[package]
name = "scenicplus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scenicplus_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2"
numpy = "0.25"
rand = "0.9.1"
rayon = "1.10"
statrs = "0.18"
voracious_radix_sort = "1.2"
funty = "2.0.0"
ndarray = { version = "0.15", features = ["rayon"] }

[dependencies.pyo3]
version = "0.25"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
